export class Airplane {
  constructor(capacity) {
    this.capacity = capacity;
  }
}
