export class Airline {
  constructor(flights) {
    this.flights = flights;
  }
}
