export class Airport {
  constructor(name) {
    this.name = name;
  }
}
