export class City {
  constructor(name) {
    this.name = name;
  }
}
