export class Flight {
  passengers = [];
  airCrews = [];
  constructor(plane, destination) {
    this.plane = plane;
    this.destination = destination;
  }
  
}
