export class Layover {
  constructor(airport, durationAproxInMin) {
    this.airport = airport;
    this.durationAproxInMin = durationAproxInMin;
  }
}
